[Fix] Fix code block line number width on tablet screen size.

--- a/source/css/_partial/rwd.styl
+++ b/source/css/_partial/rwd.styl
@@ -20,11 +20,6 @@
     font-size: 100%
     .entry-title
       font-size: 180%
-    .entry-content pre
-      white-space: pre-wrap
-      word-wrap: break-word
-      word-break: break-all
-      overflow-x: hidden
 
 // Mobile
 @media (max-width:767px)
